[package]
name = "lsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
fs_extra = "1.2.0"
fs2 = "0.4.3"
human_bytes = { version = "0.4.3", default_features = false }   
sysinfo = "0.30.7"
colored = "2.1.0"
clap = { version = "4.5.3", features = ["derive"] }
mime_guess = "2.0.4"